<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="com.gamma.persona.MainActivity">

    <Button
        android:id="@+id/consultar_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar_lista_de_usuarios"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/modificar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_usuario"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/registrar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_usuario"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>
